crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_empty_list_marker_blank_then_content_pandoc.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
assertion_line: 97
expression: cst_output
---
DOCUMENT@0..9
  LIST@0..9
    LIST_ITEM@0..9
      LIST_MARKER@0..1 "-"
      PLAIN@1..2
        NEWLINE@1..2 "\n"
      BLANK_LINE@2..3
        BLANK_LINE@2..3 "\n"
      PLAIN@3..9
        TEXT@3..8 "  foo"
        NEWLINE@8..9 "\n"
