crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_equation_attributes.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..591
  PARAGRAPH@0..142
    TEXT@0..15 "Black-Scholes ("
    CROSSREF@15..32
      CROSSREF_MARKER@15..16 "@"
      CROSSREF_KEY@16..32 "eq-black-scholes"
    TEXT@32..79 ") is a mathematical m ..."
    NEWLINE@79..80 "\n"
    TEXT@80..141 "the behavior of finan ..."
    NEWLINE@141..142 "\n"
  BLANK_LINE@142..143
    BLANK_LINE@142..143 "\n"
  PARAGRAPH@143..399
    DISPLAY_MATH@143..378
      DISPLAY_MATH_MARKER@143..145 "$$"
      MATH_CONTENT@145..376
        MATH_NEWLINE@145..146 "\n"
        MATH_COMMAND@146..151 "\\frac"
        MATH_GROUP@151..171
          MATH_GROUP_OPEN@151..152 "{"
          MATH_COMMAND@152..160 "\\partial"
          MATH_SPACE@160..161 " "
          MATH_COMMAND@161..168 "\\mathrm"
          MATH_SPACE@168..169 " "
          MATH_WORD@169..170 "C"
          MATH_GROUP_CLOSE@170..171 "}"
        MATH_GROUP@171..193
          MATH_GROUP_OPEN@171..172 "{"
          MATH_SPACE@172..173 " "
          MATH_COMMAND@173..181 "\\partial"
          MATH_SPACE@181..182 " "
          MATH_COMMAND@182..189 "\\mathrm"
          MATH_SPACE@189..190 " "
          MATH_WORD@190..191 "t"
          MATH_SPACE@191..192 " "
          MATH_GROUP_CLOSE@192..193 "}"
        MATH_SPACE@193..194 " "
        MATH_WORD@194..195 "+"
        MATH_SPACE@195..196 " "
        MATH_COMMAND@196..201 "\\frac"
        MATH_GROUP@201..204
          MATH_GROUP_OPEN@201..202 "{"
          MATH_WORD@202..203 "1"
          MATH_GROUP_CLOSE@203..204 "}"
        MATH_GROUP@204..207
          MATH_GROUP_OPEN@204..205 "{"
          MATH_WORD@205..206 "2"
          MATH_GROUP_CLOSE@206..207 "}"
        MATH_SCRIPTED@207..217
          MATH_COMMAND@207..213 "\\sigma"
          MATH_SUPERSCRIPT@213..217
            MATH_CARET@213..214 "^"
            MATH_GROUP@214..217
              MATH_GROUP_OPEN@214..215 "{"
              MATH_WORD@215..216 "2"
              MATH_GROUP_CLOSE@216..217 "}"
        MATH_SPACE@217..218 " "
        MATH_COMMAND@218..225 "\\mathrm"
        MATH_SPACE@225..226 " "
        MATH_SCRIPTED@226..231
          MATH_WORD@226..227 "S"
          MATH_SUPERSCRIPT@227..231
            MATH_CARET@227..228 "^"
            MATH_GROUP@228..231
              MATH_GROUP_OPEN@228..229 "{"
              MATH_WORD@229..230 "2"
              MATH_GROUP_CLOSE@230..231 "}"
        MATH_NEWLINE@231..232 "\n"
        MATH_COMMAND@232..237 "\\frac"
        MATH_GROUP@237..261
          MATH_GROUP_OPEN@237..238 "{"
          MATH_SCRIPTED@238..250
            MATH_COMMAND@238..246 "\\partial"
            MATH_SUPERSCRIPT@246..250
              MATH_CARET@246..247 "^"
              MATH_GROUP@247..250
                MATH_GROUP_OPEN@247..248 "{"
                MATH_WORD@248..249 "2"
                MATH_GROUP_CLOSE@249..250 "}"
          MATH_SPACE@250..251 " "
          MATH_COMMAND@251..258 "\\mathrm"
          MATH_SPACE@258..259 " "
          MATH_WORD@259..260 "C"
          MATH_GROUP_CLOSE@260..261 "}"
        MATH_GROUP@261..283
          MATH_GROUP_OPEN@261..262 "{"
          MATH_COMMAND@262..270 "\\partial"
          MATH_SPACE@270..271 " "
          MATH_COMMAND@271..278 "\\mathrm"
          MATH_SPACE@278..279 " "
          MATH_SCRIPTED@279..282
            MATH_WORD@279..280 "S"
            MATH_SUPERSCRIPT@280..282
              MATH_CARET@280..281 "^"
              MATH_WORD@281..282 "2"
          MATH_GROUP_CLOSE@282..283 "}"
        MATH_NEWLINE@283..284 "\n"
        MATH_SPACE@284..285 " "
        MATH_WORD@285..286 "+"
        MATH_SPACE@286..287 " "
        MATH_COMMAND@287..294 "\\mathrm"
        MATH_SPACE@294..295 " "
        MATH_WORD@295..296 "r"
        MATH_SPACE@296..297 " "
        MATH_COMMAND@297..304 "\\mathrm"
        MATH_SPACE@304..305 " "
        MATH_WORD@305..306 "S"
        MATH_SPACE@306..307 " "
        MATH_COMMAND@307..312 "\\frac"
        MATH_GROUP@312..332
          MATH_GROUP_OPEN@312..313 "{"
          MATH_COMMAND@313..321 "\\partial"
          MATH_SPACE@321..322 " "
          MATH_COMMAND@322..329 "\\mathrm"
          MATH_SPACE@329..330 " "
          MATH_WORD@330..331 "C"
          MATH_GROUP_CLOSE@331..332 "}"
        MATH_GROUP@332..352
          MATH_GROUP_OPEN@332..333 "{"
          MATH_COMMAND@333..341 "\\partial"
          MATH_SPACE@341..342 " "
          MATH_COMMAND@342..349 "\\mathrm"
          MATH_SPACE@349..350 " "
          MATH_WORD@350..351 "S"
          MATH_GROUP_CLOSE@351..352 "}"
        MATH_SPACE@352..353 " "
        MATH_WORD@353..354 "="
        MATH_NEWLINE@354..355 "\n"
        MATH_SPACE@355..356 " "
        MATH_COMMAND@356..363 "\\mathrm"
        MATH_SPACE@363..364 " "
        MATH_WORD@364..365 "r"
        MATH_SPACE@365..366 " "
        MATH_COMMAND@366..373 "\\mathrm"
        MATH_SPACE@373..374 " "
        MATH_WORD@374..375 "C"
        MATH_NEWLINE@375..376 "\n"
      DISPLAY_MATH_MARKER@376..378 "$$"
    WHITESPACE@378..379 " "
    ATTRIBUTE@379..398
      TEXT@379..380 "{"
      ATTR_ID@380..397 "#eq-black-scholes"
      TEXT@397..398 "}"
    NEWLINE@398..399 "\n"
  BLANK_LINE@399..400
    BLANK_LINE@399..400 "\n"
  PARAGRAPH@400..444
    TEXT@400..413 "Reference to "
    CROSSREF@413..430
      CROSSREF_MARKER@413..414 "@"
      CROSSREF_KEY@414..430 "eq-black-scholes"
    TEXT@430..443 " in the text."
    NEWLINE@443..444 "\n"
  BLANK_LINE@444..445
    BLANK_LINE@444..445 "\n"
  PARAGRAPH@445..591
    TEXT@445..508 "An equation with text ..."
    NEWLINE@508..509 "\n"
    DISPLAY_MATH@509..523
      DISPLAY_MATH_MARKER@509..511 "$$"
      MATH_CONTENT@511..521
        MATH_NEWLINE@511..512 "\n"
        MATH_WORD@512..516 "f(x)"
        MATH_SPACE@516..517 " "
        MATH_WORD@517..518 "="
        MATH_SPACE@518..519 " "
        MATH_WORD@519..520 "1"
        MATH_NEWLINE@520..521 "\n"
      DISPLAY_MATH_MARKER@521..523 "$$"
    WHITESPACE@523..524 " "
    ATTRIBUTE@524..537
      TEXT@524..525 "{"
      ATTR_ID@525..536 "#eq-problem"
      TEXT@536..537 "}"
    NEWLINE@537..538 "\n"
    TEXT@538..590 "Let's hope the attrib ..."
    NEWLINE@590..591 "\n"
