crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_equation_attributes_disabled.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..140
  PARAGRAPH@0..68
    TEXT@0..67 "When quarto_crossrefs ..."
    NEWLINE@67..68 "\n"
  BLANK_LINE@68..69
    BLANK_LINE@68..69 "\n"
  PARAGRAPH@69..99
    DISPLAY_MATH@69..83
      DISPLAY_MATH_MARKER@69..71 "$$"
      MATH_CONTENT@71..81
        MATH_NEWLINE@71..72 "\n"
        MATH_TEXT@72..73 "E"
        MATH_SPACE@73..74 " "
        MATH_OPERATOR@74..75 "="
        MATH_SPACE@75..76 " "
        MATH_TEXT@76..77 "m"
        MATH_SCRIPTED@77..80
          MATH_TEXT@77..78 "c"
          MATH_SUPERSCRIPT@78..80
            MATH_CARET@78..79 "^"
            MATH_TEXT@79..80 "2"
        MATH_NEWLINE@80..81 "\n"
      DISPLAY_MATH_MARKER@81..83 "$$"
    TEXT@83..98 " {#eq-einstein}"
    NEWLINE@98..99 "\n"
  BLANK_LINE@99..100
    BLANK_LINE@99..100 "\n"
  PARAGRAPH@100..140
    TEXT@100..139 "The {#eq-einstein} be ..."
    NEWLINE@139..140 "\n"
