crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_equation_attributes_single_line.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..91
  PARAGRAPH@0..32
    TEXT@0..31 "Single-line equation  ..."
    NEWLINE@31..32 "\n"
  BLANK_LINE@32..33
    BLANK_LINE@32..33 "\n"
  PARAGRAPH@33..63
    DISPLAY_MATH@33..47
      DISPLAY_MATH_MARKER@33..35 "$$"
      MATH_CONTENT@35..45
        MATH_SPACE@35..36 " "
        MATH_TEXT@36..37 "E"
        MATH_SPACE@37..38 " "
        MATH_OPERATOR@38..39 "="
        MATH_SPACE@39..40 " "
        MATH_TEXT@40..41 "m"
        MATH_SCRIPTED@41..44
          MATH_TEXT@41..42 "c"
          MATH_SUPERSCRIPT@42..44
            MATH_CARET@42..43 "^"
            MATH_TEXT@43..44 "2"
        MATH_SPACE@44..45 " "
      DISPLAY_MATH_MARKER@45..47 "$$"
    WHITESPACE@47..48 " "
    ATTRIBUTE@48..62
      TEXT@48..49 "{"
      ATTR_ID@49..61 "#eq-einstein"
      TEXT@61..62 "}"
    NEWLINE@62..63 "\n"
  BLANK_LINE@63..64
    BLANK_LINE@63..64 "\n"
  PARAGRAPH@64..91
    TEXT@64..77 "Reference to "
    CROSSREF@77..89
      CROSSREF_MARKER@77..78 "@"
      CROSSREF_KEY@78..89 "eq-einstein"
    TEXT@89..90 "."
    NEWLINE@90..91 "\n"
